Fix Mobile About Page spacing

--- a/client/src/pages/AboutPage/index.scss
+++ b/client/src/pages/AboutPage/index.scss
@@ -7,8 +7,8 @@
 
 .about-us-text {
   font-size: 2em;
-  padding-left: 25%;
-  padding-right: 25%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 .about-us-body {
@@ -22,8 +22,8 @@
 .about-us-body-parts {
   padding-top: 25px;
   color: black;
-  padding-left: 30%;
-  padding-right: 30%;
+  padding-left: 27.5%;
+  padding-right: 27.5%;
 }
 
 .about-us-body-top {
